controller/pkg/agentgateway/translator/testdata/routes/route-delegation-child-filter.yaml
# TODO: THIS IS NOT CURRENTLY SUPPORTED. TEST IS FAILING AS INTENDED TO MATCH CURRENT STATE
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent
  namespace: default
spec:
  parentRefs:
    - name: test-gateway
  hostnames:
    - delegation.example
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /anything/team1
      backendRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: "*"
          namespace: team1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: child-team1-implicit
  namespace: team1
spec:
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /anything/team1/implicit
      backendRefs:
        - name: httpbin
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: child-team1-explicit
  namespace: team1
spec:
  parentRefs:
    - name: parent
      namespace: default
      kind: HTTPRoute
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /anything/team1/explicit
      backendRefs:
        - name: httpbin
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: child-team1-not
  namespace: team1
spec:
  parentRefs:
    - name: not-parent
      namespace: default
      kind: HTTPRoute
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /anything/team1/not
      backendRefs:
        - name: httpbin
          port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: team1
spec:
  ports:
    - port: 8000
---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - routeGroupKey: team1/*
        weight: 1
      hostnames:
      - delegation.example
      key: default/parent.00.http
      listenerKey: default/test-gateway.http
      matches:
      - path:
          pathPrefix: /anything/team1
      name:
        kind: HTTPRoute
        name: parent
        namespace: default
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 8000
          service:
            hostname: httpbin.team1.svc.cluster.local
            namespace: team1
        weight: 1
      key: team1/child-team1-explicit.00.routegroup.team1.wildcard
      matches:
      - path:
          pathPrefix: /anything/team1/explicit
      name:
        kind: HTTPRoute
        name: child-team1-explicit
        namespace: team1
      routeGroupKey: team1/*
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 8000
          service:
            hostname: httpbin.team1.svc.cluster.local
            namespace: team1
        weight: 1
      key: team1/child-team1-implicit.00.routegroup.team1.wildcard
      matches:
      - path:
          pathPrefix: /anything/team1/implicit
      name:
        kind: HTTPRoute
        name: child-team1-implicit
        namespace: team1
      routeGroupKey: team1/*
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 8000
          service:
            hostname: httpbin.team1.svc.cluster.local
            namespace: team1
        weight: 1
      key: team1/child-team1-not.00.routegroup.team1.wildcard
      matches:
      - path:
          pathPrefix: /anything/team1/not
      name:
        kind: HTTPRoute
        name: child-team1-not
        namespace: team1
      routeGroupKey: team1/*
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: parent
    namespace: default
  spec: null
  status:
    parents:
    - conditions:
      - lastTransitionTime: fake
        message: ""
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: ""
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: agentgateway.dev/agentgateway
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test-gateway
        namespace: default
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: child-team1-explicit
    namespace: team1
  spec: null
  status:
    parents: []
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: child-team1-implicit
    namespace: team1
  spec: null
  status:
    parents: []
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: child-team1-not
    namespace: team1
  spec: null
  status:
    parents: []
